Fix spacing issue on main button action

--- a/client/components/split-button/style.scss
+++ b/client/components/split-button/style.scss
@@ -69,10 +69,6 @@
 		.woocommerce-split-button__main-action.components-button .dashicon {
 			margin-right: $gap-smallest * 2;
 		}
-
-		.woocommerce-split-button__main-action {
-			padding: 0 $gap-large 0 $gap-small;
-		}
 	}
 
 	.woocommerce-split-button__menu-wrapper {
